--- a/stroboskop.html
+++ b/stroboskop.html
@@ -3,11 +3,10 @@
 <head>
     <title>..:: Stroboskop ::..</title>
     <meta charset="UTF-8">
-    
+    <link rel = "styleSheets" href="stili.css"
     <script src="skripta.js"></script>
 </head>
 <body>
-
 
 <!-- GLAVA -->
 <glava>
