--- a/stroboskop.html
+++ b/stroboskop.html
@@ -3,7 +3,7 @@
 <head>
     <title>..:: Stroboskop ::..</title>
     <meta charset="UTF-8">
-    <link rel = "styleSheets" href="stili.css"
+    <link rel = "stylesheet" href="stili.css"
     <script src="skripta.js"></script>
 </head>
 <body>
