--- a/stroboskop.html
+++ b/stroboskop.html
@@ -16,7 +16,7 @@
 			<td style="width: 200px;">
 				Izberi barve:
 			</td>
-			<td style="width: calc(100% - 20px);">
+			<td style="text-aligin:right">
 				<span id="barve"></span> 
 				<input id="novaBarva" type="button" value="Dodaj barvo" />
 			</td>
@@ -28,7 +28,7 @@
 			<td>
 				Časovni interval: 
 			</td>
-			<td>
+			<td style="text-aligin:right">
 				od najmanj <input id="min" value="50" /> ms do največ
 				<input id="max" value="500" /> ms
 			</td>
