--- a/stroboskop.html
+++ b/stroboskop.html
@@ -20,6 +20,11 @@
 				<span id="barve"></span> 
 				<input id="novaBarva" type="button" value="Dodaj barvo" />
 			</td>
+<td style="text-aligin:right">
+				<span id="odstraniBarve"></span> 
+				<input id="novaBarva" type="button" value="Odstrani barve" />
+			</td>			
+			
 			<td rowspan="2" style="width: 300px;">
 				<button id="start">Zaženi stroboskop</button>
 			</td>
